--- a/docs/Техническое задание.md
+++ b/docs/Техническое задание.md
@@ -161,6 +161,7 @@ Router обязан:
 - 400: invalid payload / unknown model / top_k out of bounds
 - 401: invalid API key
 - 429: rate limit
+- 499: client disconnected before completion
 - 502: upstream returned error (4xx/5xx), если это не таймаут
 - 503: upstream timeout / connection error
 
