--- a/docs/Техническое задание.md
+++ b/docs/Техническое задание.md
@@ -141,6 +141,11 @@ Router обязан:
 - Ответ:
   - привести к единому формату EmbeddingsResponse (как в OpenAPI)
 
+### 7.2.1 Отмена in-flight запросов
+- `POST /v1/requests/{request_id}/cancel`
+- Возвращает статус: `canceled`, `completed` или `not_found`
+- Использует `request_id` из заголовка `X-Request-Id`, полученного в ответе
+
 ### 7.3 Обработка /v1/rerank
 - Валидация:
   - documents >= 1
