Add cancel request examples to developer guide

--- a/docs/Техническое задание.md
+++ b/docs/Техническое задание.md
@@ -141,6 +141,11 @@ Router обязан:
 - Ответ:
   - привести к единому формату EmbeddingsResponse (как в OpenAPI)
 
+### 7.2.1 Отмена in-flight запросов
+- `POST /v1/requests/{request_id}/cancel`
+- Возвращает статус: `canceled`, `completed` или `not_found`
+- Использует `request_id` из заголовка `X-Request-Id`, полученного в ответе
+
 ### 7.3 Обработка /v1/rerank
 - Валидация:
   - documents >= 1
@@ -161,6 +166,7 @@ Router обязан:
 - 400: invalid payload / unknown model / top_k out of bounds
 - 401: invalid API key
 - 429: rate limit
+- 499: client disconnected before completion
 - 502: upstream returned error (4xx/5xx), если это не таймаут
 - 503: upstream timeout / connection error
 
